lombok optimisation, removed reflections